# CompressAI-Trainer

./: .buildinfo  .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  Makefile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  train.py
.github/workflows/: pytest.yaml  static-gh-pages.yaml
_modules/: index.html
_sources/: index.rst
_sources/compressai_trainer/: plot.rst  run.rst  runners.rst  utils.rst
_sources/tools/: compressai.rst.txt  eval_model.rst.txt  rd_plotter.rst
_sources/tutorials/: full.rst  full.rst.txt  installation.rst
compressai_train/: __init__.py
compressai_train/config/: __init__.py  config.py  dataset.py  engine.py  env.py  load.py  outputs.py
compressai_train/datasets/: __init__.py  image.py
compressai_train/losses/: __init__.py  rate_distortion.py
compressai_train/models/: __init__.py
compressai_train/optimizers/: __init__.py  net_aux.py
compressai_train/plot/: __init__.py  plot.py
compressai_train/registry/: __init__.py  catalyst.py  torch.py  torchvision.py
compressai_train/runners/: __init__.py  base.py  image_compression.py
compressai_train/typing/: __init__.py  catalyst.py  torch.py
compressai_train/utils/: __init__.py  catalyst.py  git.py  metrics.py  pip.py  system.py  utils.py
compressai_train/zoo/: __init__.py  models.py
compressai_trainer/: __init__.py  config.html  plot.html  registry.html  run.html  runners.html  typing.html  utils.html
compressai_trainer/config/: __init__.py  config.py  dataset.py  engine.py  env.py  load.py  outputs.py
compressai_trainer/plot/: __init__.py  distribution.py  featuremap.py  pdf_signatures.py  plot.py  rd.py  utils.py
compressai_trainer/registry/: __init__.py  catalyst.py  torch.py  torchvision.py
compressai_trainer/run/: __init__.py  eval_model.py  plot_rd.py  train.py
compressai_trainer/runners/: __init__.py  base.py  gvae_image_compression.py  image_compression.py  utils.py
compressai_trainer/typing/: __init__.py  catalyst.py  torch.py
compressai_trainer/utils/: __init__.py  args.py  git.py  metrics.py  optimal.py  pip.py  system.py  utils.py
conf/: eval_zoo.yaml  example.yaml  example_eval_zoo.yaml  example_gvae.yaml  example_gvae_pregenerated.yaml  example_pregenerated.yaml
docs/: README.md
examples/: plot.py
tests/: SyntheticDataset.yaml  __init__.py  test_train.py  utils.py
tools/: compressai.html  eval_model.html  rd_plotter.html  train.html
tutorials/: full.html  installation.html
(+90 files in other folders)
