[tool.poetry]
name = "compressai-trainer"
version = "0.3.10"
description = "CompressAI Trainer"
authors = ["InterDigital AI Lab <compressai@interdigital.com>"]
license = "BSD 3-Clause Clear License"

[tool.poetry.scripts]
compressai-train = "compressai_trainer.run.train:main"
compressai-eval = "compressai_trainer.run.eval_model:main"
compressai-plot = "compressai_trainer.run.plot_rd:main"

[tool.poetry.dependencies]
python = ">=3.8.0,<3.12"
accelerate = "0.15.0"
aim = "^3.16.0"
catalyst = "22.04"
hydra-core = "^1.2"
matplotlib = "^3.4.3"
numpy = "^1.21.2"
omegaconf = "^2.2.2"
pandas = "^1.4.3"
Pillow = "^9.0.0"
plotly = "^5.0.0"
pytest = "^7.0.0"
pytorch-msssim = "^0.2.1"
PyYAML = "^6.0.0"
scipy = "^1.6.0"
seaborn = "^0.12.0"
tensorboard = "^2.9.0"
toml = "^0.10.2"
torch = ">=1.8.0,<3.0"
torchvision = ">=0.9.0,<1.0"
typing-extensions = "^4.0.0"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
isort = "^5.10.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^4.0"
sphinx-book-theme = "^1.0.0"
sphinx-serve = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
skip_gitignore = true
known_third_party = "PIL,pytorch_msssim,torchvision,torch"

[tool.mypy]
allow_redefinition = true
ignore_missing_imports = true
